--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-horizontal-scrolling-menu": "^0.4.2",
+    "react-responsive-modal": "^3.5.1",
+    "react-scripts": "2.1.1",
+    "react-smooth": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
