--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.6.3",
     "react-horizontal-scrolling-menu": "^0.4.2",
     "react-responsive-modal": "^3.5.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-smooth": "^1.0.2"
   },
